Fixed #61 Upgrade to OpenJDK 11