@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,24 +25,24 @@
 
 package java.util.jar;
 
-import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
+import java.util.Collection;
+import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-import java.util.Collection;
-import java.util.AbstractSet;
-import java.util.Iterator;
-import java.util.Locale;
+
 import sun.util.logging.PlatformLogger;
-import java.util.Comparator;
 
 /**
  * The Attributes class maps Manifest attribute names to associated string
  * values. Valid attribute names are case-insensitive, are restricted to
  * the ASCII characters in the set [0-9a-zA-Z_-], and cannot exceed 70
- * characters in length. Attribute values can contain any characters and
+ * characters in length. There must be a colon and a SPACE after the name;
+ * the combined length will not exceed 72 characters.
+ * Attribute values can contain any characters and
  * will be UTF8-encoded when written to the output stream.  See the
  * <a href="{@docRoot}/../specs/jar/jar.html">JAR File Specification</a>
  * for more information about valid attribute names and values.
@@ -116,7 +116,7 @@ public class Attributes implements Map<Object,Object>, Cloneable {
      * @throws IllegalArgumentException if the attribute name is invalid
      */
     public String getValue(String name) {
-        return (String)get(new Attributes.Name(name));
+        return (String)get(Name.of(name));
     }
 
     /**
@@ -168,7 +168,7 @@ public class Attributes implements Map<Object,Object>, Cloneable {
      * @exception IllegalArgumentException if the attribute name is invalid
      */
     public String putValue(String name, String value) {
-        return (String)put(new Name(name), value);
+        return (String)put(Name.of(name), value);
     }
 
     /**
@@ -312,8 +312,8 @@ public class Attributes implements Map<Object,Object>, Cloneable {
              }
              buffer.append(value);
 
-             buffer.append("\r\n");
              Manifest.make72Safe(buffer);
+             buffer.append("\r\n");
              os.writeBytes(buffer.toString());
          }
         os.writeBytes("\r\n");
@@ -357,8 +357,8 @@ public class Attributes implements Map<Object,Object>, Cloneable {
                 }
                 buffer.append(value);
 
-                buffer.append("\r\n");
                 Manifest.make72Safe(buffer);
+                buffer.append("\r\n");
                 out.writeBytes(buffer.toString());
             }
         }
@@ -371,13 +371,14 @@ public class Attributes implements Map<Object,Object>, Cloneable {
      */
     @SuppressWarnings("deprecation")
     void read(Manifest.FastInputStream is, byte[] lbuf) throws IOException {
-        String name = null, value = null;
+        String name = null, value;
         byte[] lastline = null;
 
         int len;
         while ((len = is.readLine(lbuf)) != -1) {
             boolean lineContinued = false;
-            if (lbuf[--len] != '\n') {
+            byte c = lbuf[--len];
+            if (c != '\n' && c != '\r') {
                 throw new IOException("line too long");
             }
             if (len > 0 && lbuf[len-1] == '\r') {
@@ -447,8 +448,21 @@ public class Attributes implements Map<Object,Object>, Cloneable {
      * for more information about valid attribute names and values.
      */
     public static class Name {
-        private String name;
-        private int hashCode = -1;
+        private final String name;
+        private final int hashCode;
+
+        /**
+         * Avoid allocation for common Names
+         */
+        private static final Map<String, Name> KNOWN_NAMES;
+
+        static final Name of(String name) {
+            Name n = KNOWN_NAMES.get(name);
+            if (n != null) {
+                return n;
+            }
+            return new Name(name);
+        }
 
         /**
          * Constructs a new attribute name using the given string name.
@@ -459,38 +473,33 @@ public class Attributes implements Map<Object,Object>, Cloneable {
          * @exception NullPointerException if the attribute name was null
          */
         public Name(String name) {
-            if (name == null) {
-                throw new NullPointerException("name");
-            }
-            if (!isValid(name)) {
-                throw new IllegalArgumentException(name);
-            }
+            this.hashCode = hash(name);
             this.name = name.intern();
         }
 
-        private static boolean isValid(String name) {
+        // Checks the string is valid
+        private final int hash(String name) {
+            Objects.requireNonNull(name, "name");
             int len = name.length();
             if (len > 70 || len == 0) {
-                return false;
+                throw new IllegalArgumentException(name);
             }
+            // Calculate hash code case insensitively
+            int h = 0;
             for (int i = 0; i < len; i++) {
-                if (!isValid(name.charAt(i))) {
-                    return false;
+                char c = name.charAt(i);
+                if (c >= 'a' && c <= 'z') {
+                    // hashcode must be identical for upper and lower case
+                    h = h * 31 + (c - 0x20);
+                } else if ((c >= 'A' && c <= 'Z' ||
+                        c >= '0' && c <= '9' ||
+                        c == '_' || c == '-')) {
+                    h = h * 31 + c;
+                } else {
+                    throw new IllegalArgumentException(name);
                 }
             }
-            return true;
-        }
-
-        private static boolean isValid(char c) {
-            return isAlpha(c) || isDigit(c) || c == '_' || c == '-';
-        }
-
-        private static boolean isAlpha(char c) {
-            return (c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z');
-        }
-
-        private static boolean isDigit(char c) {
-            return c >= '0' && c <= '9';
+            return h;
         }
 
         /**
@@ -500,9 +509,12 @@ public class Attributes implements Map<Object,Object>, Cloneable {
          *         specified attribute object
          */
         public boolean equals(Object o) {
+            if (this == o) {
+                return true;
+            }
             if (o instanceof Name) {
-                Comparator<String> c = String.CASE_INSENSITIVE_ORDER;
-                return c.compare(name, ((Name)o).name) == 0;
+                Name other = (Name)o;
+                return other.name.equalsIgnoreCase(name);
             } else {
                 return false;
             }
@@ -512,9 +524,6 @@ public class Attributes implements Map<Object,Object>, Cloneable {
          * Computes the hash value for this attribute name.
          */
         public int hashCode() {
-            if (hashCode == -1) {
-                hashCode = name.toLowerCase(Locale.ROOT).hashCode();
-            }
             return hashCode;
         }
 
@@ -568,12 +577,12 @@ public class Attributes implements Map<Object,Object>, Cloneable {
         /**
          * {@code Name} object for {@code Sealed} manifest attribute
          * used for sealing.
-         * @see <a href="{@docRoot}/../specs/jar/jar.html#sealing">
+         * @see <a href="{@docRoot}/../specs/jar/jar.html#package-sealing">
          *      Package Sealing</a>
          */
         public static final Name SEALED = new Name("Sealed");
 
-       /**
+        /**
          * {@code Name} object for {@code Extension-List} manifest attribute
          * used for the extension mechanism that is no longer supported.
          */
@@ -620,7 +629,7 @@ public class Attributes implements Map<Object,Object>, Cloneable {
         @Deprecated
         public static final Name IMPLEMENTATION_VENDOR_ID = new Name("Implementation-Vendor-Id");
 
-       /**
+        /**
          * {@code Name} object for {@code Implementation-URL}
          * manifest attribute.
          *
@@ -654,5 +663,55 @@ public class Attributes implements Map<Object,Object>, Cloneable {
          * @since   9
          */
         public static final Name MULTI_RELEASE = new Name("Multi-Release");
+
+        private static void addName(Map<String, Name> names, Name name) {
+            names.put(name.name, name);
+        }
+
+        static {
+            var names = new HashMap<String, Name>(64);
+            addName(names, MANIFEST_VERSION);
+            addName(names, SIGNATURE_VERSION);
+            addName(names, CONTENT_TYPE);
+            addName(names, CLASS_PATH);
+            addName(names, MAIN_CLASS);
+            addName(names, SEALED);
+            addName(names, EXTENSION_LIST);
+            addName(names, EXTENSION_NAME);
+            addName(names, IMPLEMENTATION_TITLE);
+            addName(names, IMPLEMENTATION_VERSION);
+            addName(names, IMPLEMENTATION_VENDOR);
+            addName(names, SPECIFICATION_TITLE);
+            addName(names, SPECIFICATION_VERSION);
+            addName(names, SPECIFICATION_VENDOR);
+            addName(names, MULTI_RELEASE);
+
+            // Common attributes used in MANIFEST.MF et.al; adding these has a
+            // small footprint cost, but is likely to be quickly paid for by
+            // reducing allocation when reading and parsing typical manifests
+            addName(names, new Name("Add-Exports"));
+            addName(names, new Name("Add-Opens"));
+            addName(names, new Name("Ant-Version"));
+            addName(names, new Name("Archiver-Version"));
+            addName(names, new Name("Build-Jdk"));
+            addName(names, new Name("Built-By"));
+            addName(names, new Name("Bnd-LastModified"));
+            addName(names, new Name("Bundle-Description"));
+            addName(names, new Name("Bundle-DocURL"));
+            addName(names, new Name("Bundle-License"));
+            addName(names, new Name("Bundle-ManifestVersion"));
+            addName(names, new Name("Bundle-Name"));
+            addName(names, new Name("Bundle-Vendor"));
+            addName(names, new Name("Bundle-Version"));
+            addName(names, new Name("Bundle-SymbolicName"));
+            addName(names, new Name("Created-By"));
+            addName(names, new Name("Export-Package"));
+            addName(names, new Name("Import-Package"));
+            addName(names, new Name("Name"));
+            addName(names, new Name("SHA1-Digest"));
+            addName(names, new Name("X-Compile-Source-JDK"));
+            addName(names, new Name("X-Compile-Target-JDK"));
+            KNOWN_NAMES = names;
+        }
     }
 }
