@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -134,6 +134,8 @@ module java.base {
 
     exports com.sun.security.ntlm to
         java.security.sasl;
+    exports jdk.internal to
+        jdk.jfr;
     exports jdk.internal.jimage to
         jdk.jlink;
     exports jdk.internal.jimage.decompressor to
@@ -142,25 +144,30 @@ module java.base {
         java.instrument,
         java.logging;
     exports jdk.internal.jmod to
-        jdk.compiler,   // reflective dependency
+        jdk.compiler,
         jdk.jlink;
     exports jdk.internal.logger to
         java.logging;
     exports jdk.internal.org.objectweb.asm to
         jdk.jartool,
+        jdk.jfr,
         jdk.jlink,
-        jdk.scripting.nashorn,
-        jdk.internal.vm.ci;
+        jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.tree to
+        jdk.jfr,
         jdk.jlink;
     exports jdk.internal.org.objectweb.asm.util to
+        jdk.jfr,
         jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.commons to
+        jdk.jfr,
         jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.signature to
         jdk.scripting.nashorn;
-    exports jdk.internal.math to
-        java.desktop;
+    exports jdk.internal.org.xml.sax to
+        jdk.jfr;
+    exports jdk.internal.org.xml.sax.helpers to
+        jdk.jfr;
     exports jdk.internal.misc to
         java.desktop,
         java.logging,
@@ -172,9 +179,9 @@ module java.base {
         java.xml,
         jdk.attach,
         jdk.charsets,
-        jdk.compiler,   // reflective dependency
-        jdk.incubator.httpclient,
-        jdk.jdeps,
+        jdk.compiler,
+        java.net.http,
+        jdk.jfr,
         jdk.jlink,
         jdk.jshell,
         jdk.net,
@@ -186,9 +193,9 @@ module java.base {
         java.instrument,
         java.management.rmi,
         jdk.jartool,
+        jdk.jfr,
         jdk.jlink;
     exports jdk.internal.perf to
-        java.desktop,
         java.management,
         jdk.management.agent,
         jdk.internal.jvmstat;
@@ -203,18 +210,20 @@ module java.base {
         jdk.scripting.nashorn,
         jdk.unsupported;
     exports jdk.internal.vm to
-        jdk.management.agent,
-        jdk.internal.jvmstat;
+        jdk.internal.jvmstat,
+        jdk.management.agent;
     exports jdk.internal.vm.annotation to
-        jdk.unsupported,
         jdk.internal.vm.ci,
-        jdk.incubator.httpclient;
+        jdk.unsupported;
     exports jdk.internal.util.jar to
-        jdk.jartool,
-        jdk.jdeps,
-        jdk.jlink;
+        jdk.jartool;
+    exports jdk.internal.util.xml to
+        jdk.jfr;
+    exports jdk.internal.util.xml.impl to
+        jdk.jfr;
     exports sun.net to
-        jdk.incubator.httpclient;
+        java.net.http,
+        jdk.naming.dns;
     exports sun.net.ext to
         jdk.net;
     exports sun.net.dns to
@@ -223,20 +232,20 @@ module java.base {
     exports sun.net.util to
         java.desktop,
         jdk.jconsole,
-        jdk.incubator.httpclient;
+        java.net.http;
     exports sun.net.www to
         java.desktop,
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.jartool;
     exports sun.net.www.protocol.http to
         java.security.jgss;
     exports sun.nio.ch to
         java.management,
         jdk.crypto.cryptoki,
+        jdk.net,
         jdk.sctp,
         jdk.unsupported;
     exports sun.nio.cs to
-        java.desktop,
         jdk.charsets;
     exports sun.nio.fs to
         jdk.unsupported;
@@ -250,8 +259,7 @@ module java.base {
         java.management,
         java.management.rmi,
         java.rmi,
-        java.sql.rowset,
-        java.xml;
+        java.sql.rowset;
     exports sun.security.action to
         java.desktop,
         java.security.jgss;
@@ -271,7 +279,6 @@ module java.base {
         java.rmi,
         java.security.jgss,
         jdk.crypto.cryptoki,
-        jdk.policytool,
         jdk.security.auth;
     exports sun.security.provider.certpath to
         java.naming;
@@ -294,18 +301,18 @@ module java.base {
         jdk.crypto.ec,
         jdk.crypto.cryptoki,
         jdk.jartool,
-        jdk.policytool,
         jdk.security.auth,
         jdk.security.jgss;
+    exports sun.security.util.math to
+        jdk.crypto.ec
+    exports sun.security.util.math.intpoly to
+        jdk.crypto.ec
     exports sun.security.x509 to
         jdk.crypto.ec,
         jdk.crypto.cryptoki,
-        jdk.jartool,
-        jdk.security.auth;
+        jdk.jartool;
     exports sun.security.validator to
         jdk.jartool;
-    exports sun.text.resources to
-        jdk.localedata;
     exports sun.util.cldr to
         jdk.jlink;
     exports sun.util.locale.provider to
@@ -353,7 +360,6 @@ module java.base {
     // JDK-internal service types
 
     uses jdk.internal.logger.DefaultLoggerFinder;
-    uses sun.security.ssl.ClientKeyExchangeService;
     uses sun.text.spi.JavaTimeDateTimePatternProvider;
     uses sun.util.spi.CalendarProvider;
     uses sun.util.locale.provider.LocaleDataMetaInfo;
